<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="#039BE5"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_slogan"
        android:textColor="#fff"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/www_michaeladalikwu_com"
        android:textColor="#fff"
        android:textSize="14sp" />

</LinearLayout>