<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_dashboard_layoutbackground"
    android:fitsSystemWindows="true"
    tools:context=".AppDashboard">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        android:theme="@style/navigavtionThemes"
        app:headerLayout="@layout/header"
        app:itemShapeFillColor="#1E88E5"
        app:menu="@menu/main_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="420dp"
                android:layout_height="wrap_content"
                android:background="#791E88E5"
                android:minHeight="?attr/actionBarSize"
                android:padding="10dp"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintBottom_toTopOf="@+id/dashboard_app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_icons_menu" />

            <TextView
                android:id="@+id/dashboard_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/baloo"
                android:text="@string/app_name"
                android:textSize="38sp"
                app:layout_constraintEnd_toStartOf="@+id/app_image_logo"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <TextView
                android:id="@+id/text_slogan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/app_slogan"
                app:layout_constraintBottom_toTopOf="@+id/quick_facts"
                app:layout_constraintEnd_toStartOf="@+id/app_image_logo"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_app_name"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/app_image_logo"
                android:layout_width="110dp"
                android:layout_height="93dp"
                android:contentDescription="@string/dashboard_logo"
                android:src="@drawable/ic_whatshot_24px_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <LinearLayout
                android:id="@+id/quick_facts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout_first"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_image_logo">

                <LinearLayout
                    android:id="@+id/sub_quick_facts"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#791E88E5"
                    android:padding="5dp"
                    android:paddingLeft="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_icons_facts"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/aclonica"
                        android:paddingLeft="15dp"
                        android:text="Quick Facts" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="@font/armata"
                    android:paddingLeft="20dp"
                    android:text="Do you know that the Capital of Cross River is:" />

                <LinearLayout
                    android:id="@+id/linear_navigation_quick_facts"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quick_facts">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#791E88E5">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5dp">

                            <ImageView
                                android:id="@+id/icon_left"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/ic_icon_left" />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#791E88E5">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5dp">

                            <ImageView
                                android:id="@+id/icon_right"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/ic_icon_right" />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_first"
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quick_facts">

                <androidx.cardview.widget.CardView
                    android:id="@+id/dashboard_start_exam"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="40dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/text_start_exam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_start_exam"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/aclonica"
                            android:gravity="center_horizontal"
                            android:text="Start Exam"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/image_start_exam"
                            android:layout_width="72dp"
                            android:layout_height="72dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/icons_exam" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/dashboard_cgpa_calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="50dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/text_cgpa_calculator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_cgpa_calculator"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/aclonica"
                            android:gravity="center_horizontal"
                            android:text="CGPA Calculator"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/image_cgpa_calculator"
                            android:layout_width="72dp"
                            android:layout_height="72dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/calculator" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_second"
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_first">

                <androidx.cardview.widget.CardView
                    android:id="@+id/dashboard_crutech_news_forum"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="80dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/text_crutech_news_forum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_crutech_news_forum"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/aclonica"
                            android:gravity="center_horizontal"
                            android:text="CRUTECH News/Forum"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/image_crutech_news_forum"
                            android:layout_width="72dp"
                            android:layout_height="72dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/ic_icons_news" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/dashboard_search_question"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="80dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/text_search_past_question"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_search_past_question"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/aclonica"
                            android:gravity="center_horizontal"
                            android:text="Search for Past Question"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/image_search_past_question"
                            android:layout_width="72dp"
                            android:layout_height="72dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/icon_search" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_third"
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_second">

                <androidx.cardview.widget.CardView
                    android:id="@+id/dashboard_visit_school_website"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/text_visit_school_website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_visit_school_website"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/aclonica"
                            android:gravity="center_horizontal"
                            android:text="Visit School Website"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/image_visit_school_website"
                            android:layout_width="72dp"
                            android:layout_height="72dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/icons_website" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/dashboard_about_us"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/text_about_us"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_about_us"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/aclonica"
                            android:gravity="center_horizontal"
                            android:text="About Us"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/image_about_us"
                            android:layout_width="72dp"
                            android:layout_height="72dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/ic_icons_about" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>